[package]
name = "c"
version = "0.1.0"
authors = ["koka <koka.code@gmail.com>"]

[[bin]]
path = 'src/arc037.rs'
name = 'arc037'

[[bin]]
path = 'src/abc023.rs'
name = 'abc023'

[[bin]]
path = 'src/atc001.rs'
name = 'atc001'

[[bin]]
path = 'src/abc051.rs'
name = 'abc051'

[[bin]]
path = 'src/abc054.rs'
name = 'abc054'

[[bin]]
path = 'src/abc057.rs'
name = 'abc057'

[[bin]]
path = 'src/abc061.rs'
name = 'abc061'

[[bin]]
path = 'src/abc064.rs'
name = 'abc064'

[[bin]]
path = 'src/abc070.rs'
name = 'abc070'

[dependencies]
