[package]
name = "c"
version = "0.1.0"
authors = ["koka <koka.code@gmail.com>"]

[[bin]]
path = 'src/arc037.rs'
name = 'arc037'

[[bin]]
path = 'src/abc023.rs'
name = 'abc023'

[[bin]]
path = 'src/atc001.rs'
name = 'atc001'

[[bin]]
path = 'src/abc051.rs'
name = 'abc051'

[[bin]]
path = 'src/abc054.rs'
name = 'abc054'

[[bin]]
path = 'src/abc057.rs'
name = 'abc057'

[[bin]]
path = 'src/abc061.rs'
name = 'abc061'

[[bin]]
path = 'src/abc064.rs'
name = 'abc064'

[[bin]]
path = 'src/abc070.rs'
name = 'abc070'

[[bin]]
path = 'src/abc073.rs'
name = 'abc073'

[[bin]]
path = 'src/abc075.rs'
name = 'abc075'

[[bin]]
path = 'src/abc076.rs'
name = 'abc076'

[[bin]]
path = 'src/apc001.rs'
name = 'apc001'

[[bin]]
path = 'src/agc018.rs'
name = 'agc018'

[[bin]]
path = 'src/abc006.rs'
name = 'abc006'

[[bin]]
path = 'src/arc063.rs'
name = 'arc063'

[[bin]]
path = 'src/arc066.rs'
name = 'abc066'

[dependencies]
